--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,19 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  a{
+    text-decoration: none;
+  }
+
+  .flex{
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header{
+    background-color: #ff6900;
+  }
