--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 
   a{
     text-decoration: none;
+    color: white;
+    padding-right: 5px;
   }
 
   .flex{
@@ -19,4 +21,10 @@
 
   header{
     background-color: #ff6900;
+    padding: 15px 0;
+    color: white;
+  }
+
+  img{
+    width: 10%;
   }
