--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
   }
 
-  a{
+  a, h3, h4, footer span{
     text-decoration: none;
     color: white;
     padding-right: 5px;
@@ -30,6 +30,14 @@
     background-image: linear-gradient(rgb(154, 154, 154), rgba(255, 255, 255, 0)) ;
   }
 
-  img{
+  header img{
     width: 10%;
+  }
+
+
+
+
+
+  footer{
+    background-color: #1a1a1a;
   }
