feat added header and footer icons

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@
     padding-right: 5px;
   }
 
+  header a{
+    font-size: large;
+  }
+
+  footer a{
+    font-size: small;
+  }
+
   .flex{
     display: flex;
     width: 80%;
