--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,76 @@
-
+/* common */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 
-  a, h3, h4, footer span{
-    text-decoration: none;
-    color: white;
-    padding-right: 5px;
-  }
+.flex{
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+ justify-content: space-between;
+  align-items: center;
+}
 
-  header a{
-    font-size: large;
-  }
+a, h3, h4{
+  text-decoration: none;
+  color: white;
+  padding-right: 5px;
+}
 
-  footer a{
-    font-size: small;
-  }
+/* header */
+header{
+  background-color: #ff6900;
+  padding: 15px 0;
+  color: white;
+  position: sticky;
+}
 
-  .flex{
-    display: flex;
-    width: 80%;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
-  }
+.sfumatura{
+  height: 3px;
+  width: 100%;
+  background-image: linear-gradient(rgb(154, 154, 154), rgb(255, 255, 255, 0)) ;
+  position: absolute;
+  bottom: -3px;
+}
 
-  header{
-    background-color: #ff6900;
-    padding: 15px 0;
-    color: white;
-  }
+header img{
+  width: 10%;
+}
 
-  .sfumatura{
-    height: 3px;
-    background-image: linear-gradient(rgb(154, 154, 154), rgba(255, 255, 255, 0)) ;
-  }
+header a{
+  font-size: large;
+}
 
-  header img{
-    width: 10%;
-  }
-
-
-
+/* main */
 
 
-  footer{
-    background-color: #1a1a1a;
-  }
+
+
+/* footer */
+footer{
+  background-color: #1a1a1a;
+  padding: 15px 0;
+}
+
+h3{
+  font-size: small;
+  font-weight: bolder;
+}
+
+h4{
+  font-size: small;
+}
+footer a{
+  font-size: small;
+}
+
+footer span{
+padding-left: 5px;
+}
+
+footer span a:last-child{
+ padding-right: 0;
+}
