--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,26 @@ main{
   margin: 40px 0;
 }
 
+.cuore, .sconto, .eco{
+  text-align: center;
+  position: absolute;
+}
+
 .cuore{
   height: 20px;
   width: 20px;
   background-color: white;
-  text-align: center;
-  position: absolute;
+}
+.sconto{
+  background-color: red;
+  color: white;
+  padding: 5px 10px;
+}
+
+.eco{
+  background-color: green;
+  color: white;
+  padding: 5px 10px;
 }
 
 
