--- a/css/style.css
+++ b/css/style.css
@@ -48,17 +48,28 @@ header a{
 main{
   margin: 40px 0;
 }
-
+.card{
+  width: 30%;
+  position: relative;
+}
+main img{
+  max-width: 100%;
+  height: auto;
+}
 .cuore, .sconto, .eco{
-  text-align: center;
   position: absolute;
 }
 
 .cuore{
-  height: 20px;
-  width: 20px;
+  height: 50px;
+  width: 50px;
   background-color: white;
+  top: 10px;
+  right: 0px;
+  justify-content: center;
+  font-size: xx-large;
 }
+
 .sconto{
   background-color: red;
   color: white;
