--- a/css/style.css
+++ b/css/style.css
@@ -48,15 +48,21 @@ header a{
 main{
   margin: 40px 0;
 }
+
+main .flex{
+  flex-wrap: wrap;
+}
+
 .card{
   width: 30%;
   position: relative;
+  padding-bottom: 40px;
 }
 main img{
   max-width: 100%;
   height: auto;
 }
-.cuore, .sconto, .eco{
+.cuore, .sconto, .eco, .eco1{
   position: absolute;
 }
 
@@ -77,7 +83,7 @@ main img{
   top: 450px;
 }
 
-.eco{
+.eco, .eco1{
   background-color: green;
   color: white;
   padding: 5px 10px;
@@ -85,8 +91,15 @@ main img{
   left: 60px;
 }
 
+.eco1{
+  left: 0;
+}
+
+main div 
+
 h2{
   font-size: large;
+  text-transform: uppercase;
 }
 
 .scontato{
