--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,6 @@ main img{
   left: 0;
 }
 
-main div 
-
 h2{
   font-size: large;
   text-transform: uppercase;
@@ -111,6 +109,11 @@ h2{
   font-size: small;
   font-weight: bold;
   text-decoration: line-through;
+}
+
+/* hover */
+.cuore:hover{
+  color: red;
 }
 
 
