--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .flex{
   display: flex;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
  justify-content: space-between;
   align-items: center;
@@ -26,6 +26,8 @@ header{
   padding: 15px 0;
   color: white;
   position: sticky;
+  top: 0;
+  z-index: 2;
 }
 
 .sfumatura{
@@ -62,32 +64,33 @@ main img{
   max-width: 100%;
   height: auto;
 }
+
 .cuore, .sconto, .eco, .eco1{
   position: absolute;
 }
 
 .cuore{
-  height: 50px;
-  width: 50px;
+  height: 30px;
+  width: 30px;
   background-color: white;
   top: 10px;
   right: 0px;
   justify-content: center;
-  font-size: xx-large;
+  font-size: large;
 }
 
 .sconto{
   background-color: red;
   color: white;
   padding: 5px 10px;
-  top: 450px;
+  top: 70%;
 }
 
 .eco, .eco1{
   background-color: green;
   color: white;
   padding: 5px 10px;
-  top: 450px;
+  top: 70%;
   left: 60px;
 }
 
@@ -111,16 +114,26 @@ h2{
   text-decoration: line-through;
 }
 
+.immagine1{
+  display: none;
+}
+
 /* hover */
 .cuore:hover{
   color: red;
 }
-
+.card:hover .immagine{
+  display: none;
+}
+.card:hover .immagine1{
+  display: block;
+}
 
 /* footer */
 footer{
   background-color: #1a1a1a;
-  padding: 15px 0;
+  padding: 15px 0 20px 0;
+  border-bottom: 1px solid white;
 }
 
 h3{
