--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header{
   position: sticky;
   top: 0;
   z-index: 2;
+  box-shadow: 0px 3px 3px #b9b9b9 ;
 }
 
 .sfumatura{
@@ -56,13 +57,15 @@ main .flex{
 }
 
 .card{
-  width: 30%;
+  width: 32%;
   position: relative;
   padding-bottom: 40px;
 }
 main img{
   max-width: 100%;
   height: auto;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .cuore, .sconto, .eco, .eco1{
